--- a/relatório.tex
+++ b/relatório.tex
@@ -119,7 +119,7 @@ opM			"&&"|"*"|"/"
 opR			">>"|"<<"|">="|"<="|"=="|"|=|"
 \end{verbatim}
 Para melhor compreensão da descrição acima segue-se um exemplo de um programa simples escrito na nossa linguagem.
-\begin{verbatim}
+\begin{lstlisting}[language=C]
 BEGIN
 INT x,y,y;
 ARRAY(100) vect , vects;
@@ -131,7 +131,7 @@ x=2;
 WHILE (y<<2) y=y+1; IF (x>>5) w=y+1; ENDIF; ENDWHILE;
 IF (x==1) y=y+1; y=2; ELSE y=3; ENDIF;
 END
-\end{verbatim}
+\end{lstlisting}
 
 \section{Desenho da Gramática}
 Após desenhada e descrita a linguagem imperativa que iremos usar, resta transformar todas as regras que definimos sobre ela numa \textbf{GIC}.\\
@@ -139,7 +139,7 @@ Os símbolos não-terminais da gramática que definimos são os seguintes: programa,
 Por sua vez os símbolo terminais são: num, pal, IF, ENDIF, WHILE, ENDWHILE, BEGINP, MIDDLE, ENDP, INT, ARRAY, OPM, OPR, OPA, ";", ",", "(",")" e "=". \\
 Na concepção da nossa gramática utilizamos em todos os casos recursividade à esquerda.
 Segue-se então a gramática gerada:
-\begin{verbatim}
+\begin{lstlisting}[language=C]
 programa	:	BEGINP		
 
 declaracoes	: declaracao 
@@ -202,119 +202,51 @@ ciclo 		:	WHILE '('cond')' instrucoes ENDWHILE
 cond		:	expressao
 | 	expressao OPR expressao
 ;
-\end{verbatim}
-\iffalse
-\section{Estados da Aplicação}
-\textbf{Estado QUEM}\\
-Quando é encontarada a palavra "QUEM" são guardadas as palavras seguintes, com o devido tratamento dado pela função trim definida, uma vez que estas serão referentes a quem pertence a foto.
-\begin{verbatim}
-"<"(?i:QUEM)">" 					{ BEGIN QUEM1; }
-<QUEM1>"<"	 						{ BEGIN INITIAL; } 
-<QUEM1>[^<]+						{ quem = strdup(yytext); quem = trim(quem); }
-\end{verbatim}
-
-\textbf{Estado FACTO}\\
-Quando é identificada a expressão "FACTO" é guardada a informação que a esta se segue, através da função\textit{ strdup}.
-\begin{verbatim}
-"<"(?i:FACTO)">"					{ BEGIN FACTO1; }
-<FACTO1>"<"	 						{ BEGIN INITIAL; } 
-<FACTO1>[^<]+	 					{ facto = strdup(yytext); }
-\end{verbatim}
-
-\textbf{Estado QUANDO}\\
-Aquando da análise léxica, se for detetada a palavra "QUANDO" a data a esta referente é guardada. Posteriormente é chamada a função breakFoto que recebe como parâmetro a string guardada e converte-a num tipo de dados \textit{struct data}. 
-\begin{verbatim}
-"<"(?i:QUANDO)" "(?i:DATA)"=\""		{ BEGIN QUANDO1; }
-<QUANDO1>"\""						{ BEGIN INITIAL; } 
-<QUANDO1>[^\"]+ 					{ quando = strdup(yytext); 
-da = breakFoto(quando); }
-\end{verbatim}
-
-\textbf{Estado FOTO} \\
-Encontrada a palavra "FOTO" é criado um novo nodo na lista ligada que contêm a informação referentes a outras fotos. Depois de inserido o novo nodo, a lista é ordenada pela data das fotos.
-\begin{verbatim}
-"<"(?i:FOTO)" "(?i:FICHEIRO)"=\""	{ BEGIN FOTO1; }
-<FOTO1>"\""	 						{ BEGIN INITIAL; } 
-<FOTO1>[^\"]+						{ foto = strdup(yytext); 
-nodo = novoNodo(da, foto, quem, facto);
-sortedInsert(&dados, nodo);
-}
-\end{verbatim}
+\end{lstlisting}
 
 \section{Módulos da Aplicação}
 \textbf{makefile} Ficheiro com a configuração de compilação.\\
-\textbf{parser.l} Ficheiro com código necessário para fazer o processamento dos ficheiros XML que contêm a informação. \\
-\textbf{listaligada.h} Ficheiro que contém o código necessário à implementação de uma lista ligada e das funções necessárias para a sua manipulação. \\
-\textbf{dados.h} Ficheiro onde se encontra a estrutura definida para guardar a data das fotos. \\
-\textbf{html.h} Ficheiro com o código que gera as páginas em HTML.
+\textbf{tp2.l} Ficheiro com código de um analisador léxico que serve de suporte à nossa gramática. \\
+\textbf{tp2.y} Ficheiro que contém o código \textbf{YACC} correspondente à nossa gramática e inclui nesta o código necessário para a geração do código Assembly resultante. \\
+\textbf{arvore.c} Ficheiro onde se encontra o código da estrutura definida para guardar as informações das variáveis encontradas no programa. \\
+\textbf{arvore.h} Ficheiro com a estrutura definida para guardar informações das variáveis e com as assinaturas das funções definidas no arvore.c.
 
 \section{Estruturas de Dados}
-Dado ser necessário guradar alguns dados, a estutura de dados escolhida foi a lista ligada. Esta estrutura possui um campo para guardar a data da fotografia, o facto, breve descrição da foto, o nome do ficheiro da foto e por último, um campo quem, que se destina a guardar os nomes das pessoas retratadas.
+Para guardar as informações relativas às variáveis que se encontram nos programas escritos na nossa linguagem foi necessário criar uma estrutura. \\
+A estrutura mais apropriada para este efeito é uma Tabela de Hash devido a ser mais eficiente a procura por \textit{strings}, no entanto, devido à nossa inexperiência em trabalhar com esse tipo de estrutura, optamos por utilizar uma Árvore Binária de Procura, com a qual estamos mais familiarizados, para este efeito.\\
+Foi necessário guardar, para cada variável declarada, o seu nome, tipo, registo e tamanho. \\
+Decidimos que o tamanho seria 1 para todas as variáveis de tipo inteiro, ficando os \textit{arrays} com o tamanho definido aquando da declaração.\\
+O valor do registo é sequencial, ou seja, existe uma variável global inteira que é incrementada de cada vez que uma variável é declarada. No caso dessa variável ser um \textit{array} o valor do registo é incrementado tantas vezes quanto o tamanho do \textit{array}.\\
+Segue-se o código referente à declaração da estrutura que utilizamos para guardar estas informações:
 
 \begin{lstlisting}[language=C]
-struct data {
-	int ano;
-	int mes;
-	int dia:
-};
-
-struct listaLigada {
-	struct data datay;
-	char *nome;
-	char *quem;
-	char *fato;
-	struct listaLigada * next;
-};
+typedef struct node {
+char* nome;
+char* tipo;
+int tamanho;
+int registo;
+struct node *esq;
+struct node *dir;
+} Node, *Tree;
 \end{lstlisting}
 
 
-\chapter{Codificação e Testes}
 
-\section{Alternativas, Decisões e Problemas de Implementação}
-No decorrer do desenvolvimento do projeto verificamos que nem todas as fotos eram possuidoras do campo "FACTO", campo este que deveria ser o cabeçalho das fotos. Embora tenha sido pedido no enunciado que utilizassemos este como cabeçalho o grupo decidiu que seria melhor se ao invés se colocasse o campo "QUEM" como cabeçalho.
- 
-\section{Testes realizados e Resultados}
-São apresentadas de seguida, imagens que mostram o resultado do filtro de texto elaborado pelo grupo para alguns dos ficheiros XML.
+\chapter{Testes realizados e Resultados}\label{testes}
 
-\begin{figure}[h]
-	\includegraphics[width=10cm]{imagens/testeAntonioMachado.png}
-	\centering
-	\caption{Resultado do filtro de testo para o caso do António Machado}
-\end{figure}
 
-\begin{figure}[h]
-	\includegraphics[width=10cm]{imagens/teste2MariaCeleste.png}
-	\centering
-	\caption{Resultado do filtro de testo para o caso do José de Oliveira Dias}
-\end{figure}
-
-\begin{figure}[h]
-	\includegraphics[width=10cm]{imagens/testeMariaCeleste.png}
-	\centering
-	\caption{Resultado do filtro de testo para o caso da Maria Celeste}
-\end{figure}
-
-\begin{figure}[h]
-	\includegraphics[width=10cm]{imagens/testeTabernadoFausto.png}
-	\centering
-	\caption{Resultado do filtro de testo para o caso Taberna do Fausto}
-\end{figure}
-
-%\VerbatimInput{teste1.txt}
 
 
 \chapter{Conclusão} \label{concl}
-A realização deste projeto foi fundamental para se consolidar a matéria leccionada quer nas aulas práticas quer nas aula teóricas, uma vez que as técnicas de utilização de expressões regulares aí aprendidas facilitou a implementação do problema. Estas técnicas pertimitiram recolher de forma eficiente e clara as informações pertendidas.\\
-Foi ainda possível ao grupo aprender a trabalhar com o básico da linguagem HTML que nunca tinha sido utilizada por qualquer dos elementos.
-O projeto  "Museu da Pessoa - tratamento de fotografias" foi muito enriquecedor, dado que obrigou a dedicar um porção de tempo e a refinar as qualidades do grupo na utilização do Flex e na construção das expressões regulares.
 
 \appendix
 \chapter{Código Flex}
-\lstinputlisting{parser.l} %input de um ficheiro
-\chapter{Código da Lista Ligada}
-\lstinputlisting{listaligada.c}
-\chapter{Código para gerar o HTML}
-\lstinputlisting{html.c}
+\lstinputlisting{tp2.l} 
+\iffalse
+\chapter{Código Yacc}
+\lstinputlisting{tp2.y}
+\chapter{Código da Árvore Binária}
+\lstinputlisting{arvore.c}
 \fi
 
 
